feat: add more information to swagger and refactor names
